--- a/p8105_hw6_ak5098.Rmd
+++ b/p8105_hw6_ak5098.Rmd
@@ -9,6 +9,9 @@ library(tidyverse)
 library(dplyr)
 library(purrr)
 library(ggplot2)
+library(boot)
+library(modelr)
+library(mgcv)
 options(scipen = 999) 
 ```
 
@@ -17,7 +20,7 @@ PROBLEM 2
 homicide = read_csv("homicide-data.csv")
 
 #create city-state variable
-homicide_df = homicide %>% mutate(city_state = str_c(city, state, sep = ", ")) 
+homicide_df = homicide %>% drop_na() %>% mutate(city_state = str_c(city, state, sep = ", ")) 
 
 #create binary variable indicating whether the homicide is solved
 check_solved <- function(data, column, phrase) {
@@ -43,20 +46,26 @@ homicide_tidy = homicide_tidy %>%
   mutate(victim_age = as.numeric(gsub("Unknown", "NA", victim_age)))
 
 
+
 #creating binary variables
-homicide_tidy = homicide_tidy %>% 
+homicide_tidy = homicide_tidy %>%
+  filter(!(victim_age=="Uknown")) %>% 
   mutate(solved_binary = as.numeric(disposition == "Closed by arrest"),
          victim_race_binary = fct_relevel(victim_race, "White"),
-         victim_sex_binary = fct_relevel(victim_sex, "Male"))
+         victim_sex_binary = fct_relevel(victim_sex, "Female"))
 
 
+?fct_relevel
+
+homicide_tidy %>% select(victim_sex_binary) %>% filter(victim_sex== "Uknown")
 #glm for baltimore
 homicide_baltimore = homicide_tidy %>% filter(city_state == "Baltimore, MD")
 model1 = glm(solved_binary ~ victim_age + victim_race_binary + victim_sex_binary, data=homicide_baltimore, family=binomial())
 
-model1_tidy = model1 %>% broom::tidy(conf.int=TRUE, conf.level=0.95) %>% 
-  mutate(OR = exp(estimate)) |>
-  select(term, log_OR = estimate, OR, p.value, conf.low, conf.high) |> 
+model1_tidy = model1 %>% broom::tidy(conf.int=TRUE, conf.level=0.95) %>%
+  mutate(OR = exp(estimate)) %>% 
+  filter(term == "victim_sex_binaryMale") %>% 
+  select(term, log_OR = estimate, OR, p.value, conf.low, conf.high) %>% 
   knitr::kable(digits = 3)
 ```
 estimated odds ratio comparing male to female with all other variables fixed: 2.35, 95% CI: [0.584, 1.126]
@@ -65,7 +74,7 @@ estimated odds ratio comparing male to female with all other variables fixed: 2.
 #glm for each city 
 
 glm_city_results = homicide_tidy %>%
-  nest(data = -city_state) %>% # Nest data by city
+  nest(data = -city_state) %>% # nest data by city
   mutate(
     model2 = map(data, ~ glm(solved_binary ~ victim_age + victim_race_binary + victim_sex_binary, 
                             data = ., family = binomial())),
@@ -73,18 +82,89 @@ glm_city_results = homicide_tidy %>%
   ) %>%
   unnest(model2_tidy) 
 
-glm_city_results
-
-
 
 #Create a plot that shows the estimated ORs and CIs for each city. Organize cities according to estimated OR, and comment on the plot.
 glm_city_results %>% 
-  arrange(estimate) %>% 
+  filter(term == "victim_sex_binaryMale") %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
   ggplot(aes(x = city_state, y = estimate)) +
   geom_point() +
   geom_errorbar(aes(ymax = conf.high, ymin = conf.low, width = 0.1)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  scale_y_continuous(limits = c(0, 5))
+  scale_y_continuous(limits = c(0, 5)) +
+  labs(x = "City", y = "Odds Ratio", title = "Odds Ratios Comparing Male to Female Victims in Solved Homicides (by City)")
 
 
 ```
+
+
+
+PROBLEM 3
+```{r}
+birthwt = read_csv("birthweight.csv")
+
+#tidying data
+#birthwt_tidy = birthwt %>% 
+  drop_na() %>% mutate(
+    fincome = fct_relevel(fincome, )
+  )
+
+#model 1
+birthwt_model1 = lm(bwt ~ fincome + smoken + gaweeks, data=birthwt)
+
+birthwt_model1_resid <- birthwt %>%
+  modelr::add_predictions(birthwt_model1) %>%  
+  modelr::add_residuals(birthwt_model1)
+
+resid_pred_plot1 = birthwt_model1_resid %>% 
+  ggplot(aes(x = pred, y = resid)) + 
+  geom_point() +
+  geom_smooth()
+
+
+#model2
+birthwt_model2 = lm(bwt ~ blength + gaweeks, data=birthwt)
+
+#model3
+birthwt_model3 = lm(bwt ~ bhead + blength + babysex + bhead*blength + blength*babysex + bhead*babysex + bhead*blength*babysex, data=birthwt)
+
+#cross validation 
+cv_df = crossv_mc(birthwt, 100) 
+
+cv_df =
+  cv_df %>% 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble)) %>% 
+  mutate(
+    
+  )
+
+
+#creating data frame with RMSE
+cv_df_rmse = 
+  cv_df %>% 
+  mutate(
+    linear_mod1 = map(train, ~birthwt_model1),
+    linear_mod2 = map(train, ~birthwt_model2),
+    linear_mod3 = map(train, ~birthwt_model3)
+  ) %>% 
+  mutate(
+    rmse_mod1 = map2_dbl(linear_mod1, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_mod2 = map2_dbl(linear_mod2, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_mod3 = map2_dbl(linear_mod3, test, \(mod, df) rmse(model = mod, data = df))
+  )
+
+#plotting RMSE for each model
+cv_df_rmse %>%  
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+
+```
+proposed regression model: financial income, average number of cigarettes smoked per day during pregnancy, gestational age in weeks as predictors. I picked these predictors because they are hypothesized factors that have an affect birthweight. 
