--- a/p8105_hw6_ak5098.Rmd
+++ b/p8105_hw6_ak5098.Rmd
@@ -49,26 +49,20 @@ homicide_tidy = homicide_tidy %>%
 
 #creating binary variables
 homicide_tidy = homicide_tidy %>%
-  filter(!(victim_age=="Uknown")) %>% 
   mutate(solved_binary = as.numeric(disposition == "Closed by arrest"),
          victim_race_binary = fct_relevel(victim_race, "White"),
          victim_sex_binary = fct_relevel(victim_sex, "Female"))
 
-
-?fct_relevel
-
-homicide_tidy %>% select(victim_sex_binary) %>% filter(victim_sex== "Uknown")
 #glm for baltimore
 homicide_baltimore = homicide_tidy %>% filter(city_state == "Baltimore, MD")
 model1 = glm(solved_binary ~ victim_age + victim_race_binary + victim_sex_binary, data=homicide_baltimore, family=binomial())
 
-model1_tidy = model1 %>% broom::tidy(conf.int=TRUE, conf.level=0.95) %>%
-  mutate(OR = exp(estimate)) %>% 
+model1_tidy = model1 %>% broom::tidy(conf.int=TRUE, conf.level=0.95, exponentiate=TRUE) %>%
   filter(term == "victim_sex_binaryMale") %>% 
-  select(term, log_OR = estimate, OR, p.value, conf.low, conf.high) %>% 
+  select(term, estimate, p.value, conf.low, conf.high) %>% 
   knitr::kable(digits = 3)
 ```
-estimated odds ratio comparing male to female with all other variables fixed: 2.35, 95% CI: [0.584, 1.126]
+estimated odds ratio comparing male to female with all other variables fixed: 0.426, 95% CI: [0.324, 0.558]
 
 ```{r}
 #glm for each city 
@@ -96,7 +90,7 @@ glm_city_results %>%
 
 
 ```
-
+Plot description: in the majority of cities, male victims are less likely to have their cases solved compared to female victims. New York has the lowest odds of a solved homicicde for male victims compared to female victims. New Mexico has the highest odds of a solved homicicde for male victims compared to female victims.
 
 
 PROBLEM 3
