--- a/p8105_hw6_ak5098.Rmd
+++ b/p8105_hw6_ak5098.Rmd
@@ -14,6 +14,36 @@ library(modelr)
 library(mgcv)
 options(scipen = 999) 
 ```
+PROBLEM 1 (commented out because issues with knitting)
+```{r}
+
+#install.packages("devtools")
+#devtools::install_github("p8105/p8105.datasets")
+#library(p8105.datasets)
+#data("rnoaa")
+
+
+#weather_df = 
+  #rnoaa::meteo_pull_monitors(
+    #c("USW00094728"),
+    #var = c("PRCP", "TMIN", "TMAX"), 
+    #date_min = "2017-01-01",
+    #date_max = "2017-12-31") %>%
+  #mutate(
+    #name = recode(id, USW00094728 = "CentralPark_NY"),
+    #tmin = tmin / 10,
+    #tmax = tmax / 10) %>%
+  #select(name, id, everything())
+
+#boot_straps = 
+  #tibble(strap_number = 1:5000) %>%  
+  #mutate(
+    #strap_sample = map(strap_number, \(i) boot_sample(df = weather_df))
+  #)
+
+#boot_straps %>% broom::glance()
+#boot_straps %>% broom::tidy()
+```
 
 PROBLEM 2
 ```{r}
@@ -97,12 +127,6 @@ PROBLEM 3
 ```{r}
 birthwt = read_csv("birthweight.csv")
 
-#tidying data
-#birthwt_tidy = birthwt %>% 
-  drop_na() %>% mutate(
-    fincome = fct_relevel(fincome, )
-  )
-
 #model 1
 birthwt_model1 = lm(bwt ~ fincome + smoken + gaweeks, data=birthwt)
 
@@ -162,6 +186,8 @@ cv_df_rmse %>%
   ggplot(aes(x = model, y = rmse)) + geom_violin()
 
 ```
+
+
 proposed regression model: financial income, average number of cigarettes smoked per day during pregnancy, gestational age in weeks as predictors. I picked these predictors because they are hypothesized factors that have an affect birthweight. Although I created this model based on hypothesized underlying factors, in the future I would check the Pearson correlation coefficients between the predictors and outcome before I used these variables as predictors. I decided to fit a linear model because all the variables are continuous.  
 
 Model comparison: Model 3 has the lowest RMSE values and highest overall density, indicating it is the best fitted model. Model 1 has very high RMSE, meaning it is probably not well fitted (again, in the future I would check correlation coefficient before putting those variables into a model). Model 2 is better fitted than Model 1 and worst fitted than Model 3. 
